k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sipprog-rh-backend
  labels:
    app: sipprog-rh-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sipprog-rh-backend
  template:
    metadata:
      labels:
        app: sipprog-rh-backend
    spec:
      containers:
        - name: sipprog-rh-backend
          image: registry.nosi.cv/igrp-sipprog-servico/sipprog-rh-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
