k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sipprog-rh-backend-service
  labels:
    app: sipprog-rh-backend
spec:
  selector:
    app: sipprog-rh-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
